--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,36 @@ services:
       - POSTGRES_DB=db
     ports:
       - "54320:5432"
+    networks:
+      local_net:
+        aliases:
+          - databaseservice
+
+  categoryservice:
+    depends_on:
+      - database
+    build:
+      context: ./categoryservice
+      dockerfile: ./Dockerfile
+    ports:
+      - "8002:8002"
+    networks:
+      local_net:
+        aliases:
+          - categoryservice
+          -
+  productservice:
+    depends_on:
+      - database
+    build:
+      context: ./productservice
+      dockerfile: ./Dockerfile
+    ports:
+      - "8001:8001"
+    networks:
+      local_net:
+        aliases:
+          - productservice
+networks:
+  local_net:
+    driver: bridge
