--- a/UserService/src/main/resources/application.yml
+++ b/UserService/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8002
+  port: 8003
 spring:
   application:
     name: user-service
@@ -7,7 +7,7 @@ spring:
     hibernate:
       ddl-auto: update
   datasource:
-    url: jdbc:postgresql://localhost:54320/db
+    url: jdbc:postgresql://database:5432/db
     username: admin
     password: password1234
 
