category service connects to eureka  (pom.xml: changed dependency structure)

--- a/CategoryService/src/main/resources/application.yml
+++ b/CategoryService/src/main/resources/application.yml
@@ -11,4 +11,14 @@ spring:
     username: admin
     password: password1234
 
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://eureka:8761/eureka/
+  instance:
+    preferIpAddress: true
+    leaseRenewalIntervalInSeconds: 5
+    metadataMap:
+      instanceId: "${spring.application.name}:${random.value}"
+
 
