--- a/ContentService/src/main/resources/application.yml
+++ b/ContentService/src/main/resources/application.yml
@@ -13,6 +13,11 @@ eureka:
     leaseRenewalIntervalInSeconds: 5
     metadataMap:
       instanceId: "${spring.application.name}:${random.value}"
-
+management:
+  endpoints:
+    web:
+      exposure:
+        include: hystrix.stream
+      base-path: /
 
 
